@@ -247,6 +247,10 @@ START:       Execute the actions of "start" without actually starting.
              For instance, it is not required that dependencies are started.
              Moreover, this can be called even if the script was started.
              Use this only in case of fatal problems and with extreme care!
+RESTART:     Execute the actions "STOP && START" without actually restarting.
+             For instance, dependencies are not restarted.
+             Moreover, this can be called even if the script was stopped.
+             Use this only in case of fatal problems and with extreme care!
 will_squash: returns true/false (and a corresponding message unless -q is
              used) depending on whether the stop operation would re-squash
              or kill $DIR_CHANGE (the latter means that $KILL_FILE exists).
