@@ -1,22 +1,0 @@
-#! /usr/bin/env sh
-
-export LC_ALL=C
-umask 022
-
-Echo() {
-	printf '%s\n' "${*}"
-}
-
-Die() {
-	s=${?}
-	Echo "${1}" >&2
-	exit ${2:-${s}}
-}
-
-ExecDie() {
-	Echo "# ${*}"
-	"${@}" || Die "${*} returned ${?}"
-}
-
-ExecDie git add .
-ExecDie git commit -a "${@}"
