@@ -1,17 +1,0 @@
-#! /usr/bin/env sh
-
-export LC_ALL=C
-umask 022
-
-Echo() {
-	printf '%s\n' "${*}"
-}
-
-ExecWarn() {
-	Echo "# ${*}"
-	"${@}" || Echo "warning: ${*} returned ${?}"
-}
-
-ExecWarn git prune
-ExecWarn git repack -a -d
-ExecWarn git gc --aggressive
