@@ -1,5 +1,10 @@
 # ChangeLog for squash_dir
 
+*squash_dir-12.8
+	Martin Väth <martin at mvath.de>:
+	- Fix mksquashfs argument order for first call. Thanks to Massimo B.
+	- Add RESTART option
+
 *squash_dir-12.7
 	Martin Väth <martin at mvath.de>:
 	- Support global /etc/conf.d/squash_dir and provide default
